Committing assignment #3 from Chapter 4

--- a/journal.Rmd
+++ b/journal.Rmd
@@ -24,6 +24,7 @@ The journal is divided into sections: one for each assignment (coding challenge)
 
 Thank you, and I hope this is of any use to you. Enjoy!
 
+
 # **Assignment No. 1**
 
 *Last compiled:* **`r Sys.Date()`**
@@ -85,6 +86,7 @@ library(tidyverse)
 # Other
 library(devtools)    # used to install non-CRAN packages
 ```
+
 
 If you haven't installed these packages, please install them by calling `install.packages(`*[name_of_package]*`)` in the R console. After installing, run the above code block again.
 
@@ -305,7 +307,6 @@ sales_by_loc_year_tbl %>%
 ```
 
 
-
 # **Assignment No. 2**
 
 This assignment had two objectives:
@@ -343,6 +344,7 @@ library(rvest)          # Wrappers to Download, Manipulate HTML/XML
 library(purrr)          # Functional Programming Toolkit for R
 ```
 
+
 If you haven't installed these packages, please install them by calling `install.packages(`*[name_of_package]*`)` in the R console. After installing, run the above code block again.
 
 
@@ -355,7 +357,6 @@ Typically, data is in `json`,`xml`, or `html` format. It consists of an exposed 
 For this challenge, I used the iTunes Search API. For more details on what you can and can't do, please visit their website: https://affiliate.itunes.apple.com/resources/documentation/itunes-store-web-service-search-api/.
 
 I decided to pull information about the famous trap artist, Bad Bunny and limit the results to 25. For this, I built a simple API wrapper function where I `path` and `queries` as arguments to the function. The wrapper function includes error checking, where it automatically throws an error if a request did not succeed.
-
 
 ```{r}
 # response <- GET("https://itunes.apple.com/search?term=bad+bunny&limit=25")
@@ -394,7 +395,6 @@ In general, web scraping in R (or in any other language) boils down to the follo
 <li>Decide what part of the page you want to read and find out what HTML/CSS you need to select it.</li>
 <li>Select the HTML and analyze it in the way you need.</li>
 </ul>
-
 
 ```{r}
 url_home <- "https://www.rosebikes.com"
@@ -469,7 +469,7 @@ rosebike_cat_mdl_price_joined
 
 The code shown above is merely an introduction to web scraping static sites with the use `rvest` library. However, keep in mind many web pages are dynamic and use JavaScript to load their content.These websites often require a different approach to gather the data and `rvest` library would not suffice.
 
-Things to keep in mind...
+<u>Things to keep in mind...</u>
 <ul>
 <li>*Static & Well Structured*: Web scraping is best suited for static & well structured web pages.</li>
 <li>*Code Changes*: The underling HTML code of a web page can change anytime due to changes in design or for updating details. In such case, your script will stop working. It is important to identify changes to the web page and modify the web scraping script accordingly.</li>
@@ -479,9 +479,330 @@ Things to keep in mind...
 </ul>
 
 
-# Assignment No. 3
+# **Assignment No. 3**
 
-Write text here...
+The main objective of this challenge is to perform analysis on publicly available patent data. Patents play a critical role in incentivizing innovation, without which we would not have much of the technology we rely on everyday. A patent provides its owner with the ability to make money off of something that they invented, without having to worry about someone else copying their technology.
+
+PatentsView is one of USPTO’s (United States Patent and Trademark Office) new initiatives intended to increase the usability and value of patent data. That data can be downloaded here:
+
+Website: <a href="https://www.patentsview.org/download/">https://www.patentsview.org/download/</a>
+
+*Further details about the data*:<br />
+```{r echo=FALSE}
+
+# Patents DB dictionary bulk downloads
+xfun::embed_file('../00_data/04_patent_data/Patents_DB_dictionary_bulk_downloads.xlsx')
+```
+
+
+Detailed information about the datatypes for each column of the tables available in PatentsView can be found in the `Patents_DB_dictionary_bulk_downloads.xlsx` file. This helps create the *“recipe”* to import the right data for analysis.
+
+At the end of this challenge, the folowing questions are answered:
+<ul>
+<li>*[Q1] Patent Dominance*: What **US company/corporation** has the most patents? List the 10 US companies with the most assigned/granted patents.</li>
+<li>*[Q2] Recent Patent Activity*: What US company had the most patents granted in 2019? List the top 10 companies with the most new granted patents for 2019.</li>
+<li>*[Q3] Innovation in Tech*: What is the most innovative tech sector? For the top 10 companies **(worldwide)** with the most patents, what are the top 5 USPTO tech main classes?</li>
+</ul>
+
+<br />
+<table>
+<thead>
+<tr><th>**Question**</th><th>**Table**</th></tr>
+</thead>
+<tbody>
+<tr><td>**1**</td><td>*assignee*, *patent_assignee*</td></tr>
+<tr><td>**2**</td><td>*assignee*, *patent_assignee*, *patent*</td></tr>
+<tr><td>**3**</td><td>*assignee*, *patent_assignee*, *uspc*</td></tr>
+</tbody>
+</table>
+<br />
+
+## Step 1: Load libraries
+
+As a first step, please load `tidyverse` and `vroom` libraries. For details on what these libraries offer, please refer to the comments in the code block below.
+
+```{r}
+# STEP 1: Load Libraries ---
+# Tidy, Transform, & Visualize
+library(tidyverse)
+#  library(tibble)    --> is a modern re-imagining of the data frame
+#  library(readr)     --> provides a fast and friendly way to read rectangular data like csv
+#  library(dplyr)     --> provides a grammar of data manipulation
+#  library(magrittr)  --> offers a set of operators which make your code more readable (pipe operator)
+#  library(tidyr)     --> provides a set of functions that help you get to tidy data
+#  library(stringr)   --> provides a cohesive set of functions designed to make working with strings easy
+#  library(ggplot2)   --> graphics
+
+library(vroom)        # Imports delimited files fast
+```
+
+
+If you haven't installed these packages, please install them by calling `install.packages(`*[name_of_package]*`)` in the R console. After installing, run the above code block again.
+
+
+## Step 2: Import the data
+
+Next, we import the data from the tables shown above: `assignee`, `patent_assignee`, `patent`, and `uspc`. Please note that after you download the data from PatentsView website, you will need to specify the correct file path when executing the `vroom()` function.
+
+As the data is being pulled, it's a good practice to view the dimensions and glimpse the data you're dealing with by piping `dim()` and `glimpse()` respectively. Since we're dealing with larger data, I decided to ommit this from demonstration. Instead, they are commented in the code sections below.
+
+```{r calculation, eval=FALSE}
+# Import Assignee Data
+col_types <- list(
+  id = col_character(),
+  type = col_double(),
+  name_first = col_character(),
+  name_last = col_character(),
+  organization = col_character())
+
+assignee_data <- vroom(
+  file       = "../00_data/04_patent_data/01_raw_data/assignee.tsv", 
+  delim      = "\t", 
+  col_types  = col_types,
+  na         = c("", "NA", "NULL"))
+
+# View dimensions and glimpse of the 'assignee' data
+#assignee_data %>% dim()
+#assignee_data %>% glimpse()
+
+# Import Patent Data
+col_types <- list(
+  id = col_character(),
+  type = col_character(),
+  number = col_character(),
+  country = col_character(),
+  date = col_date("%Y-%m-%d"),
+  abstract = col_character(),
+  title = col_character(),
+  kind = col_character(),
+  num_claims = col_double(),
+  filename = col_character(),
+  withdrawn = col_character())
+
+patent_data <- vroom(
+  file       = "../00_data/04_patent_data/01_raw_data/patent.tsv", 
+  delim      = "\t", 
+  col_types  = col_types,
+  na         = c("", "NA", "NULL"))
+
+# View dimensions and glimpse of the 'patent' data
+#patent_data %>% dim()
+#patent_data %>% glimpse()
+
+# Import Patent Assignee Data
+col_types <- list(
+  patent_id = col_character(),
+  assignee_id = col_character(),
+  location_id = col_character())
+
+patent_assignee_data <- vroom(
+  file       = "../00_data/04_patent_data/01_raw_data/patent_assignee.tsv", 
+  delim      = "\t", 
+  col_types  = col_types,
+  na         = c("", "NA", "NULL"))
+
+# View dimensions and glimpse of the 'patent_assignee' data
+#patent_assignee_data %>% dim()
+#patent_assignee_data %>% glimpse()
+
+# Import USPC Data
+col_types <- list(
+  uuid = col_character(),
+  patent_id = col_character(),
+  mainclass_id = col_character(),
+  subclass_id = col_character(),
+  sequence = col_double())
+
+uspc_data <- vroom(
+  file       = "../00_data/04_patent_data/01_raw_data/uspc.tsv", 
+  delim      = "\t", 
+  col_types  = col_types,
+  na         = c("", "NA", "NULL"))
+
+# View dimensions and glimpse of the 'uspc' data
+#uspc_data %>% dim()
+#uspc_data %>% glimpse()
+```
+
+
+## Step 3: Wrangle Analyze the data
+
+Next, I performed some minor changes to the data in order to prepare them for joining `dplyr` operations. Please note `dplyr` is loaded when you load the `tidyverse` library during step 1.
+
+```{r calculation, eval=FALSE}
+# Create new column to with year only; necessary for data output below
+# Be sure to have "lubridate" package installed before running the next lines
+patent_data <- patent_data %>% 
+  mutate(year = lubridate::year(date))
+
+# Rename column names for following joining operations
+assignee_data <- assignee_data %>% rename(assignee_id = id)
+patent_data <- patent_data %>% rename(patent_id = id)
+```
+
+
+You will also notice I call `rm` command to remove the joined data from Rstudio's global environment. This can help with how fast your system performs the `dplyr` operations. This is primarily important because we're dealing with millions of observations per table.
+
+One more thing to note is I use `tic()` and `toc()` commands from `tictoc` library to track how long it takes to perform operations. I feel it's a good practice to do so.
+
+
+### Patent Dominance (Question 1)
+
+```{r calculation, eval=FALSE}
+# Be sure to have "tictoc" package installed before running the next lines
+# Join 'assignee' and 'patent_assignee' tables
+tictoc::tic()
+combined_data <- assignee_data %>%
+  right_join(patent_assignee_data, by = "assignee_id")
+tictoc::toc()
+
+# Columns to keep; speeds up the data wrangling
+keep <- c("assignee_id",
+          "type",
+          "organization",
+          "patent_id")
+combined_data <- combined_data[keep]
+
+# Quantify whether each row has patent or not since patent_id column has NA values
+combined_data$patent_count <- ifelse(!is.na(combined_data$patent_id), 1, 0)
+
+
+## PATENT DOMINANCE ##
+# What US company / corporation has the most patents?
+# List the 10 US companies with the most assigned/granted patents.
+result5 <- combined_data %>%
+  # Filter by type 2 to get US Companies/Organizations
+  filter(type == 2) %>%
+  # Add number of patents by each organization and sort in descending order
+  # Changed the column name for better legibility of what were looking for
+  group_by("US Company / Organization" = organization) %>%
+  summarise(Total_Patents = sum(patent_count)) %>%
+  ungroup() %>%
+  arrange(desc(Total_Patents)) %>%
+  # Output the top 10 US companies/organizations with most assigned/granted patents
+  slice(1:10)
+
+write_rds(result5, "temp_results/result5.rds")
+# Remove the combined_data from Rstudio's global environment for memory deallocation
+rm(combined_data)
+```
+```{r result5}
+result <- read_rds("temp_results/result5.rds")
+#file.remove("../02_data_wrangling/result.rds")
+
+result
+```
+
+### Recent Patent Activity (Question 2)
+
+```{r calculation, eval=FALSE}
+# Be sure to have "tictoc" package installed before running the next lines
+# Join 'assignee', 'patent_assignee', and 'patent' tables
+tictoc::tic()
+combined_data <- patent_assignee_data %>%
+  right_join(patent_data, by = "patent_id")
+tictoc::toc()
+
+tictoc::tic()
+combined_data <- assignee_data %>%
+  right_join(combined_data, by = "assignee_id")
+tictoc::toc()
+
+# Columns to keep; speeds up the data wrangling
+keep <- c("assignee_id",
+          "type.x",
+          "organization",
+          "patent_id",
+          "number",
+          "year")
+combined_data <- combined_data[keep]
+
+# Quantify whether each row has patent or not since patent_id column has NA values
+combined_data$patent_count <- ifelse(!is.na(combined_data$patent_id), 1, 0)
+
+
+## RECENT PATENT ACTIVITY ##
+# What US company had the most patents granted in 2019?
+# List the top 10 companies with the most new granted patents for 2019.
+result6 <- combined_data %>%
+  # Filter by type 2 and year 2019 to get 2019 US Companies/Organizations
+  filter(type.x == 2, year == 2019) %>%
+  # Add number of patents by each organization and sort in descending order
+  # Changed the column name for better legibility of what were looking for
+  group_by("US Company / Organization" = organization) %>%
+  summarise(Patents_Total_2019 = sum(patent_count)) %>%
+  ungroup() %>%
+  arrange(desc(Patents_Total_2019)) %>%
+  # Output the top 10 US companies/organizations with most assigned/granted patents in 2019
+  slice(1:10)
+
+write_rds(result6, "temp_results/result6.rds")
+# Remove the combined_data from Rstudio's global environment for memory deallocation
+rm(combined_data)
+```
+```{r result6}
+result <- read_rds("temp_results/result6.rds")
+#file.remove("../02_data_wrangling/result.rds")
+
+result
+```
+
+### Innovation in Tech (Question 3)
+
+```{r calculation, eval=FALSE}
+# Be sure to have "tictoc" package installed before running the next lines
+# Join 'assignee', 'patent_assignee', and 'uspc' tables
+tictoc::tic()
+combined_data <- patent_assignee_data %>%
+  right_join(uspc_data, by = "patent_id")
+tictoc::toc()
+
+tictoc::tic()
+combined_data <- assignee_data %>%
+  right_join(combined_data, by = "assignee_id")
+tictoc::toc()
+
+# Columns to keep; speeds up the data wrangling
+keep <- c("assignee_id",
+          "type",
+          "organization",
+          "patent_id",
+          "mainclass_id",
+          "subclass_id")
+combined_data <- combined_data[keep]
+
+# Quantify whether each row has patent or not since patent_id column has NA values
+combined_data$patent_count <- ifelse(!is.na(combined_data$patent_id), 1, 0)
+
+
+## INNOVATION IN TECH ##
+# What is the most innovative tech sector?
+# For the top 10 companies (worldwide) with the most patents, what are the top 5 USPTO tech main classes?
+result7 <- combined_data %>%
+  # Filter by type 2 or 3 in data set to get worldwide companies
+   filter(type == 2 | type == 3) %>%
+  # Add number of patents by tech main classes and sort in descending order
+  # Changed the column name for better legibility of what were looking for
+  group_by('USPTO Tech Main Class' = mainclass_id) %>%
+  summarise(Patents_Total = sum(patent_count)) %>%
+  ungroup() %>%
+  arrange(desc(Patents_Total)) %>%
+  # Output the top 5 USPTO tech main classes of the top worldwide companies with most patents
+  slice(1:5)
+  ## 257	Active solid-state devices (e.g., transistors, solid-state diodes)
+  ## 428	Stock material or miscellaneous articles
+  ## 435	Chemistry: molecular biology and microbiology
+  ## 514	Drug, bio-affecting and body treating compositions
+  ## 438	Semiconductor device manufacturing: process
+
+write_rds(result7, "temp_results/result7.rds")
+# Remove the combined_data from Rstudio's global environment for memory deallocation
+rm(combined_data)
+```
+```{r result7}
+result <- read_rds("temp_results/result7.rds")
+result
+```
 
 # Assignment No. 4
 
